[package]
name = "keyopen"
version = "1.0.8"
description = "An App to Open Files or Other Applications Quickly"
authors = ["iewnfod"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-all", "system-tray", "dialog-all", "global-shortcut-all", "shell-open" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_mut = "0.1.0"
users = "0.11.0"
auto-launch = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
