[package]
name = "keyopen"
version = "2.0.1"
description = "An App to Open Files or Other Applications Quickly"
authors = ["iewnfod"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray",
    "fs-all",
    "window-all",
    "dialog-all",
    "global-shortcut-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
auto-launch = "0.5.0"
lazy_static = "1.4.0"
env_logger = "0.11.2"
log = "0.4.21"
home = "0.5.9"
enigo = "0.2.0"
phf = "0.11.2"
swift-rs = "1.0.6"
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
